@@ -1,37 +1,24 @@
 package com.rse.webservice.locket.utils;
 
-import java.lang.reflect.Field;
+import org.springframework.beans.BeanUtils;
+
+import java.lang.reflect.InvocationTargetException;
 
 public class DataUtils {
-    public static <T> T copyFields(Object source, Class<T> destinationClass) {
-        T destination = null;
 
+    public static <T> T copyProperties(Object source, Class<T> classTarget, String... ignoreProperties) {
         try {
-            destination = destinationClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace(); // Handle exceptions based on your requirements
+            T target = classTarget.getDeclaredConstructor().newInstance();
+            BeanUtils.copyProperties(source, target, ignoreProperties);
+            return target;
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                 InvocationTargetException e) {
+            throw new RuntimeException("Error copying properties", e);
         }
+    }
 
-        if (destination != null) {
-            Class<?> sourceClass = source.getClass();
-
-            for (Field sourceField : sourceClass.getDeclaredFields()) {
-                try {
-                    // Access private fields
-                    sourceField.setAccessible(true);
-
-                    Field destinationField = destinationClass.getDeclaredField(sourceField.getName());
-                    destinationField.setAccessible(true);
-
-                    // Copy the value from source to destination
-                    Object value = sourceField.get(source);
-                    destinationField.set(destination, value);
-                } catch (NoSuchFieldException | IllegalAccessException e) {
-                    e.printStackTrace(); // Handle exceptions based on your requirements
-                }
-            }
-        }
-
-        return destination;
+    public static <T> T copyProperties(Object source, Class<T> classTarget) {
+        return copyProperties(source, classTarget, (String[]) null);
     }
 }
+
